--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <head>
 <title>Meine Audio-CDs und MP3s</title>
 <link rel="icon" type="image/png" href="icons/talogo.png">
-<link rev="made" href="mailto:Andreas.Tranquillini@uibk.ac.at">
-<meta name="author" content="Andreas Tranquillini">
-<meta http-equiv="content-type" content="text/html; charset=Windows-1252">
 </head>
 <script language="JavaScript">
 function CheckNew(jahr, monat, tag)
 // zeigt ein New-Icon an, wenn jahr/monat/tag nicht mehr als ein
-// einstellbares Zeitfenster (dzt. 90 Tage) zurückliegt.
+// einstellbares Zeitfenster (dzt. 90 Tage) zurueckliegt.
 {
 	var heute = new Date();
 	var damals = new Date(jahr, monat - 1, tag);
@@ -27,8 +24,8 @@ function CheckNew(jahr, monat, tag)
 <table border="0" cellspacing="0" cellpadding="6" width="100%">
 <tr>
 <td bgcolor="#c0d0e0"><h1 align="center"><font face="Comic Sans MS">Meine Audio-CDs und MP3s</font></h1>
-<p align="center"><img src="icons/bi-cd.gif" width="73" height="22" alt="Übersicht" title="Meine Audio-CD-Sammlung" border="0">
-<a href="em.html"><img src="icons/ba-em.gif" width="73" height="22" alt="Ernste Musik" title="Abendländische Kunstmusik (Ernste Musik)" border="0"></a>
+<p align="center"><img src="icons/bi-cd.gif" width="73" height="22" alt="Ãœbersicht" title="Meine Audio-CD-Sammlung" border="0">
+<a href="em.html"><img src="icons/ba-em.gif" width="73" height="22" alt="Ernste Musik" title="Abendl&auml;ndische Kunstmusik (Ernste Musik)" border="0"></a>
 <a href="um.html"><img src="icons/ba-um.gif" width="73" height="22" alt="Unterhaltung" title="Salon- und Unterhaltungsmusik" border="0"></a>
 <a href="jazz.html"><img src="icons/ba-jazz.gif" width="73" height="22" alt="Jazz" title="Jazz und verwandte Stilrichtungen" border="0"></a>
 <a href="wm.html"><img src="icons/ba-wm.gif" width="73" height="22" alt="Weltmusik" title="Welt- und Meditationsmusik" border="0"></a>
@@ -41,7 +38,7 @@ function CheckNew(jahr, monat, tag)
 <p><hr></p>
 
 <ul type="square">
-<li><a href="em.html">Abendländische Kunstmusik („Ernste Musik“)</a></li>
+<li><a href="em.html">Abendl&auml;ndische Kunstmusik (&bdquo;Ernste Musik&ldquo;)</a></li>
 <li><a href="um.html">Salon- und Unterhaltungsmusik</a></li>
 <li><a href="jazz.html">Jazz und verwandte Stilrichtungen</a></li>
 <li><a href="wm.html">Welt- und Meditationsmusik</a></li>
