--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Meine Audio-CDs und MP3s</title>
+<title>Meine Audio-CDs und MP3-Dateien</title>
 <link rel="icon" type="image/png" href="icons/talogo.png">
 </head>
 <script language="JavaScript">
@@ -23,7 +23,7 @@ function CheckNew(jahr, monat, tag)
 
 <table border="0" cellspacing="0" cellpadding="6" width="100%">
 <tr>
-<td bgcolor="#c0d0e0"><h1 align="center"><font face="Comic Sans MS">Meine Audio-CDs und MP3s</font></h1>
+<td bgcolor="#c0d0e0"><h1 align="center"><font face="Comic Sans MS">Meine Audio-CDs und MP3-Dateien</font></h1>
 <p align="center"><img src="icons/bi-cd.gif" width="73" height="22" alt="Übersicht" title="Meine Audio-CD-Sammlung" border="0">
 <a href="em.html"><img src="icons/ba-em.gif" width="73" height="22" alt="Ernste Musik" title="Abendl&auml;ndische Kunstmusik (Ernste Musik)" border="0"></a>
 <a href="um.html"><img src="icons/ba-um.gif" width="73" height="22" alt="Unterhaltung" title="Salon- und Unterhaltungsmusik" border="0"></a>
