--- a/em.html
+++ b/em.html
@@ -116,14 +116,14 @@ Sony/dhm 88697526982
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000025KZU"><img src="covers/bux2.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Dietrich_Buxtehude">Dietrich Buxtehude</a> (1637&ndash;1707): Das Orgelwerk, Folge&nbsp;2</b><br>
 <i>Wolfgang R&uuml;bsam, Orgel</i><br>
-Bellaphon 690·01·017</td>
+Bellaphon 690&middot;01&middot;017</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000025A89"><img src="covers/bux4.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Dietrich_Buxtehude">Dietrich Buxtehude</a> (1637&ndash;1707): Das Orgelwerk, Folge&nbsp;4</b><br>
 <i>Wolfgang R&uuml;bsam, Orgel</i><br>
-Bellaphon 690·01·024</td>
+Bellaphon 690&middot;01&middot;024</td>
 </tr>
 
 <tr>
@@ -194,7 +194,7 @@ Philips 420 216-2</td>
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B006H4GPPW"><img src="covers/vivaldi_lpdm.jpg" width="130" height="116" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Antonio_Vivaldi">Antonio Vivaldi</a> (1678&ndash;1741): &bdquo;La Porta delle Muse&ldquo; RV&nbsp;125, 510, 128, 246, 138, 330, 157, 508</b><br>
-<i>Florian Deuter, Mónica Waisman, Violine<br>
+<i>Florian Deuter, M&oacute;nica Waisman, Violine<br>
 Harmonie Universelle</i><br>
 Accent ACC 24266
 <script language="JavaScript">CheckNew(2012,3,24);</script></td>
@@ -225,7 +225,7 @@ Forlane UCD 16548</td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Wie sch&ouml;n leuchtet der Morgenstern&ldquo; BWV&nbsp;1<br>
 <a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Nun komm, der Heiden Heiland&ldquo; BWV&nbsp;61<br>
 <a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Dazu ist erschienen der Sohn Gottes&ldquo; BWV&nbsp;40</b><br>
-<i>Arleen Augér, Ortrun Wenkel, Peter Schreier, Siegfried Lorenz<br>
+<i>Arleen Aug&eacute;r, Ortrun Wenkel, Peter Schreier, Siegfried Lorenz<br>
 Thomanerchor Leipzig, Neues Bachisches Collegium Musicum, Hans-Joachim Rotzsch</i><br>
 edel/CCC 0001402CCC</td>
 </tr>
@@ -256,7 +256,7 @@ Accentus Music ACC 30471
 <td valign="top"><a href="https://www.amazon.de/gp/product/B09B4C1JX4"><img src="covers/bach_21_147.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Ich hatte viel Bek&uuml;mmernis&ldquo; BWV&nbsp;21<br>
 <a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Herz und Mund und Tat und Leben&ldquo; BWV&nbsp;147</b><br>
-<i>Núria Rial, Wiebke Lehmkuhl, Benedikt Kristj&aacute;nsson, Matthias Winckhler<br>
+<i>N&uacute;ria Rial, Wiebke Lehmkuhl, Benedikt Kristj&aacute;nsson, Matthias Winckhler<br>
 Gaechinger Cantorey, Hans-Christoph Rademann</i><br>
 Carus 83.522
 <script language="JavaScript">CheckNew(2024,7,12);</script></td>
@@ -288,7 +288,7 @@ Sony/dhm 19658710832
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Es ist ein trotzig und verzagt Ding&ldquo; BWV&nbsp;176<br>
 <a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Ich ruf zu Dir, Herr Jesu Christ&ldquo; BWV&nbsp;177<br>
 <a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Kantate &bdquo;Wo Gott der Herr nicht bei uns h&auml;lt&ldquo; BWV&nbsp;178</b><br>
-<i>Inga Nielsen, Arleen Augér, Carolyn Watkinson, Julia Hamari, Gabriele Schreckenbach, Peter Schreier, Kurt Equiluz, Aldo Baldin, Walter Heldwein, Wolfgang Sch&ouml;ne<br>
+<i>Inga Nielsen, Arleen Aug&eacute;r, Carolyn Watkinson, Julia Hamari, Gabriele Schreckenbach, Peter Schreier, Kurt Equiluz, Aldo Baldin, Walter Heldwein, Wolfgang Sch&ouml;ne<br>
 G&auml;chinger Kantorei, Bach-Kollegium Stuttgart, Helmuth Rilling</i><br>
 H&auml;nssler 92.053
 <script language="JavaScript">CheckNew(2006,9,4);</script></td>
@@ -377,7 +377,7 @@ Challenge Classics CC72545
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B07VSJ77LF"><img src="covers/bach_wo.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johann_Sebastian_Bach">Johann S. Bach</a> (1685&ndash;1750): Weihnachts-Oratorium BWV&nbsp;248</b><br>
-<i>Lisa Larsson, Elisabeth von Magnus, Christoph Prégardien, Klaus Mertens<br>
+<i>Lisa Larsson, Elisabeth von Magnus, Christoph Pr&eacute;gardien, Klaus Mertens<br>
 The Amsterdam Baroque Choir &amp; Orchestra, Ton Koopman</i><br>
 Doppel-CD<br>
 Warner Classics/Erato 0190295392789
@@ -715,7 +715,7 @@ EMI/Virgin Classics 7243 5 62155 2 8
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000E0LBAO"><img src="covers/messias.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Georg_Friedrich_H%C3%A4ndel">Georg F. H&auml;ndel</a> (1685&ndash;1759): Messiah</b><br>
-<i>Arleen Augér, Anne Sofie von Otter, Michael Chance, Howard Crook, John Tomlinson<br>
+<i>Arleen Aug&eacute;r, Anne Sofie von Otter, Michael Chance, Howard Crook, John Tomlinson<br>
 The English Concert Choir, The English Concert, Trevor Pinnock</i><br>
 Doppel-CD<br>
 Original-Image Bit-Processing<br>
@@ -869,7 +869,7 @@ Philips 446 664-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000001G4E"><img src="covers/lvb_13_27.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Sonate Nr.&nbsp;8 c-moll op.&nbsp;13 &bdquo;Pathétique&ldquo;<br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Sonate Nr.&nbsp;8 c-moll op.&nbsp;13 &bdquo;Path&eacute;tique&ldquo;<br>
 <a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Sonate Nr.&nbsp;13 Es-dur op.&nbsp;27/1<br>
 <a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Sonate Nr.&nbsp;14 cis-moll op.&nbsp;27/2 &bdquo;Mondschein&ldquo;</b><br>
 <i>Emil Gilels, Klavier</i><br>
@@ -1005,10 +1005,10 @@ Deutsche Grammophon 410 862-2</td>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000024TM0"><img src="covers/chopin_preludes.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): 24 Préludes op.&nbsp;28<br>
-<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): Prélude cis-moll op.&nbsp;45<br>
-<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): Prélude As-dur op.&nbsp;posth.<br>
-<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): 4 Imprompus op.&nbsp;29, 36, 51, 66</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): 24 Pr&eacute;ludes op.&nbsp;28<br>
+<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): Pr&eacute;lude cis-moll op.&nbsp;45<br>
+<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): Pr&eacute;lude As-dur op.&nbsp;posth.<br>
+<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): 4 Imprompus op.&nbsp;29, 36, 51, 66</b><br>
 <i>Claudio Arrau, Klavier</i><br>
 Philips 426 634-2
 <script language="JavaScript">CheckNew(2017,1,22);</script></td>
@@ -1016,7 +1016,7 @@ Philips 426 634-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00A1422R4"><img src="covers/chopin_walzer.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): 19 Walzer</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): 19 Walzer</b><br>
 <i>Claudio Arrau, Klavier</i><br>
 Universal/Decca 478 5154
 <script language="JavaScript">CheckNew(2015,4,4);</script></td>
@@ -1024,8 +1024,8 @@ Universal/Decca 478 5154
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B004HOZ6JK"><img src="covers/chopin_etudes.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): 12 Etudes op.&nbsp;10<br>
-<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): 12 Etudes op.&nbsp;25</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): 12 Etudes op.&nbsp;10<br>
+<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): 12 Etudes op.&nbsp;25</b><br>
 <i>Maurizio Pollini, Klavier</i><br>
 Deutsche Grammophon 413 794-2
 <script language="JavaScript">CheckNew(2016,10,9);</script></td>
@@ -1033,15 +1033,15 @@ Deutsche Grammophon 413 794-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000001G6A"><img src="covers/fc_ks23.gif" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): Klaviersonate Nr.&nbsp;2 b-moll op.&nbsp;35<br>
-<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): Klaviersonate Nr.&nbsp;3 h-moll op.&nbsp;58</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): Klaviersonate Nr.&nbsp;2 b-moll op.&nbsp;35<br>
+<a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): Klaviersonate Nr.&nbsp;3 h-moll op.&nbsp;58</b><br>
 <i>Maurizio Pollini, Klavier</i><br>
 Deutsche Grammophon 415 346-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000001GS1"><img src="covers/415061.gif" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Frédéric Chopin</a> (1810&ndash;1849): Klavierkonzert Nr.&nbsp;1 e-moll<br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin">Fr&eacute;d&eacute;ric Chopin</a> (1810&ndash;1849): Klavierkonzert Nr.&nbsp;1 e-moll<br>
 <a href="https://de.wikipedia.org/wiki/Franz_Liszt">Franz Liszt</A> (1811&ndash;1886): Klavierkonzert Nr.&nbsp;1 Es-dur</b><br>
 <i>Martha Argerich, Klavier<br>
 London Symphony Orchestra, Claudio Abbado</i><br>
@@ -1100,7 +1100,7 @@ Philips 462 059-2</td>
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B003FVCZ2C"><img src="covers/bd_ust.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johannes_Brahms">Johannes Brahms</a> (1833&ndash;1897): Ungarische T&auml;nze 1&ndash;21<br>
-<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Antonín Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Slawische T&auml;nze</b><br>
+<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Anton&iacute;n Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Slawische T&auml;nze</b><br>
 <i>Gewandhausorchester Leipzig, Kurt Masur</i><br>
 Decca/Classical Choice 480 3586
 <script language="JavaScript">CheckNew(2012,7,14);</script></td>
@@ -1143,8 +1143,8 @@ Philips 416 821-2
 
 <tr>
 <td valign="top"><img src="covers/dvorak_s48.jpg" width="130" height="130" border="0" alt="[cover]" title=""></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Antonín Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;4 d-moll op.&nbsp;13<br>
-<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Antonín Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;8 G-dur op.&nbsp;33</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Anton&iacute;n Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;4 d-moll op.&nbsp;13<br>
+<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Anton&iacute;n Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;8 G-dur op.&nbsp;33</b><br>
 <i>Slovak Philharmonic Orchestra, Stephen Gunzenhauser</i><br>
 Naxos 8.550269
 <script language="JavaScript">CheckNew(2005,2,12);</script></td>
@@ -1152,8 +1152,8 @@ Naxos 8.550269
 
 <tr>
 <td valign="top"><img src="covers/410032.gif" width="130" height="130" border="0" alt="[cover]" title=""></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Antonín Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;9 e-moll op.&nbsp;95 &bdquo;Aus der Neuen Welt&ldquo;<br>
-<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Antonín Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Karneval-Ouvert&uuml;re op.&nbsp;92</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Anton&iacute;n Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Symphonie Nr.&nbsp;9 e-moll op.&nbsp;95 &bdquo;Aus der Neuen Welt&ldquo;<br>
+<a href="https://de.wikipedia.org/wiki/Anton%C3%ADn_Dvo%C5%99%C3%A1k">Anton&iacute;n Dvo&rcaron;&aacute;k</a> (1841&ndash;1904): Karneval-Ouvert&uuml;re op.&nbsp;92</b><br>
 <i>Wiener Philharmoniker, Lorin Maazel</i><br>
 Deutsche Grammophon 410 032-2</td>
 </tr>
@@ -1161,7 +1161,7 @@ Deutsche Grammophon 410 032-2</td>
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B0001N9ZCA"><img src="covers/debussy_cdl.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Claude_Debussy">Claude Debussy</a> (1862&ndash;1918): Clair de lune and other favourite piano works</b><br>
-<i>François-Joël Thiollier, Klavier</i><br>
+<i>François-Jo&euml;l Thiollier, Klavier</i><br>
 Naxos 8.555800
 <script language="JavaScript">CheckNew(2018,10,13);</script></td>
 </tr>
@@ -1187,7 +1187,7 @@ Philips 468 921-2
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B0000041OT"><img src="covers/410145.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Ottorino_Respighi">Ottorino Respighi</a> (1879&ndash;1936): Pini di Roma - Feste Romane - Fontane di Roma</b><br>
-<i>Orchestre symphonique de Montréal, Charles Dutoit</i><br>
+<i>Orchestre symphonique de Montr&eacute;al, Charles Dutoit</i><br>
 Decca 410 145-2</td>
 </tr>
 
@@ -1221,17 +1221,17 @@ Deutsche Grammophon 415 136-2</td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/George_Gershwin">George Gershwin</a> (1898&ndash;1937): Rhapsody In Blue<br>
 <a href="https://de.wikipedia.org/wiki/George_Gershwin">George Gershwin</a> (1898&ndash;1937): Ein Amerikaner in Paris<br>
 <a href="https://de.wikipedia.org/wiki/George_Gershwin">George Gershwin</a> (1898&ndash;1937): Konzert f&uuml;r Klavier und Orchester F-dur</b><br>
-<i>André Previn, Klavier<br>
-London Symphony Orchestra, André Previn</i><br>
+<i>Andr&eacute; Previn, Klavier<br>
+London Symphony Orchestra, Andr&eacute; Previn</i><br>
 EMI CDC 7 47161 2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B0000046JP"><img src="covers/510301.jpg" width="130" height="129" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Joaqu%C3%ADn_Rodrigo">Joaquín Rodrigo</a> (1901&ndash;1999): Concierto de Aranjuez<br>
-<a href="https://de.wikipedia.org/wiki/Isaac_Alb%C3%A9niz">Isaac Albéniz</a> (1860&ndash;1909): Iberia (Ausschnitte)</b><br>
-<i>Paco de Lucía, José María Bandera, Juan Manuel Cañizares, Gitarre<br>
-Orquesta de Cadaqués, Edmon Colomer</i><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Joaqu%C3%ADn_Rodrigo">Joaqu&iacute;n Rodrigo</a> (1901&ndash;1999): Concierto de Aranjuez<br>
+<a href="https://de.wikipedia.org/wiki/Isaac_Alb%C3%A9niz">Isaac Alb&eacute;niz</a> (1860&ndash;1909): Iberia (Ausschnitte)</b><br>
+<i>Paco de Luc&iacute;a, Jos&eacute; Mar&iacute;a Bandera, Juan Manuel Ca&ntilde;izares, Gitarre<br>
+Orquesta de Cadaqu&eacute;s, Edmon Colomer</i><br>
 Philips 510 301-2
 <script language="JavaScript">CheckNew(2006,5,18);</script></td>
 </tr>
@@ -1317,8 +1317,8 @@ Capriccio 10068</td>
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00V7GP6H8"><img src="covers/tempest.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b>&bdquo;The Tempest&ldquo; &ndash; inspired by Shakespeare<br>
-Matthew Locke, Henry Purcell, Frank Martin, Philippe Hersand, Thierry Pécou, ...</b><br>
-<i>La Tempête, Simon-Pierre Bestion</i><br>
+Matthew Locke, Henry Purcell, Frank Martin, Philippe Hersand, Thierry P&eacute;cou, ...</b><br>
+<i>La Temp&ecirc;te, Simon-Pierre Bestion</i><br>
 Outhere/Alpha ALPHA 608
 <script language="JavaScript">CheckNew(2019,10,6);</script></td>
 </tr>
@@ -1326,7 +1326,7 @@ Outhere/Alpha ALPHA 608
 <tr>
 <td valign="top"><a href="http://www.amazon.de/gp/product/B000028BWW"><img src="covers/mot11641.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b>Die neue Orgel im Stephansdom zu Wien<br>
-Jean-François Dandrieu, Anton Heiller, Johann Sebastian Bach, Sigfrid Karg-Elert, César Franck</b><br>
+Jean-François Dandrieu, Anton Heiller, Johann Sebastian Bach, Sigfrid Karg-Elert, C&eacute;sar Franck</b><br>
 <i>Peter Planyavsky, Orgel</i><br>
 Motette CD MOT 11641
 <script language="JavaScript">CheckNew(2008,12,5);</script></td>
