--- a/em.html
+++ b/em.html
@@ -1161,7 +1161,7 @@ Deutsche Grammophon 410 032-2</td>
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B0001N9ZCA"><img src="covers/debussy_cdl.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Claude_Debussy">Claude Debussy</a> (1862&ndash;1918): Clair de lune and other favourite piano works</b><br>
-<i>François-Jo&euml;l Thiollier, Klavier</i><br>
+<i>Fran&ccedil;ois-Jo&euml;l Thiollier, Klavier</i><br>
 Naxos 8.555800
 <script language="JavaScript">CheckNew(2018,10,13);</script></td>
 </tr>
@@ -1326,7 +1326,7 @@ Outhere/Alpha ALPHA 608
 <tr>
 <td valign="top"><a href="http://www.amazon.de/gp/product/B000028BWW"><img src="covers/mot11641.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b>Die neue Orgel im Stephansdom zu Wien<br>
-Jean-François Dandrieu, Anton Heiller, Johann Sebastian Bach, Sigfrid Karg-Elert, C&eacute;sar Franck</b><br>
+Jean-Fran&ccedil;ois Dandrieu, Anton Heiller, Johann Sebastian Bach, Sigfrid Karg-Elert, C&eacute;sar Franck</b><br>
 <i>Peter Planyavsky, Orgel</i><br>
 Motette CD MOT 11641
 <script language="JavaScript">CheckNew(2008,12,5);</script></td>
