--- a/ipop.html
+++ b/ipop.html
@@ -235,7 +235,7 @@ Warner/Rhino 8122-74090-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00006GEML"><img src="covers/chicago_story.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b>The <a href="https://de.wikipedia.org/wiki/Chicago_%28Band%29">Chicago</a> Story – Complete Greatest Hits</b><br>
+<td valign="top"><b>The <a href="https://de.wikipedia.org/wiki/Chicago_%28Band%29">Chicago</a> Story &ndash; Complete Greatest Hits</b><br>
 Doppel-CD<br>
 Warner/Rhino 8122 73606 2
 <script language="JavaScript">CheckNew(2008,8,2);</script></td>
@@ -322,7 +322,7 @@ BMG 74321338022</td>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00002ZZJD"><img src="covers/dp_ta.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Deep_Purple">Deep Purple</a>: Total Abandon – Australia '99 (live)</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/Deep_Purple">Deep Purple</a>: Total Abandon &ndash; Australia '99 (live)</b><br>
 <font color="grey">MP3-Dateien</font><!-- chr --></td>
 </tr>
 
@@ -368,7 +368,7 @@ EAMS 4000-2</td>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000006YAV"><img src="covers/db_lttm.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b>Listen To The Music – The Very Best Of <a href="https://de.wikipedia.org/wiki/The_Doobie_Brothers">The Doobie Brothers</a></b><br>
+<td valign="top"><b>Listen To The Music &ndash; The Very Best Of <a href="https://de.wikipedia.org/wiki/The_Doobie_Brothers">The Doobie Brothers</a></b><br>
 Warner Bros. 9548-31094-2</td>
 </tr>
 
@@ -622,7 +622,7 @@ GEP GEPCD 1034
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B002QAQ9SY"><img src="covers/iq_frequency.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/IQ_(Band)">IQ</a>: Frequency</b><br>
-Special Edition inkl. DVD “IQ Live in Holland 2007”<br>
+Special Edition inkl. DVD &bdquo;IQ Live in Holland 2007&ldquo;<br>
 InsideOut/GEP SPV 28040 CD+DVD
 <script language="JavaScript">CheckNew(2011,01,12);</script></td>
 </tr>
@@ -1169,7 +1169,7 @@ Snapper KSCOPE124
 <td valign="top"><a href="https://www.amazon.de/gp/product/B001O8C5EQ"><img src="covers/pt_signify.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Porcupine_Tree">Porcupine Tree</a>: Signify</b><br>
 Remixed &amp; Remastered 2003<br>
-Doppel-CD inkl. “Insignificance”<br>
+Doppel-CD inkl. &bdquo;Insignificance&ldquo;<br>
 Snapper KSCOPE131
 <script language="JavaScript">CheckNew(2011,5,23);</script></td>
 </tr>
@@ -1438,77 +1438,77 @@ Virgin 8 40534 2</td>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050OTU"><img src="covers/oe3gh01.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 1</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 1</b><br>
 <i>Queen, Tina Turner, Backstreet Boys, Simply Red, Phil Collins, ...</i><br>
 Warner Music Austria 9548-35120-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050OS5"><img src="covers/oe3gh02.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 2</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 2</b><br>
 <i>Paul McCartney, Katrina &amp; the Waves, Eternal feat. Bebe Winans, Cardigans, R. Kelly, ...</i><br>
 EMI Austria 7243 8 57914 2 0</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050OVQ"><img src="covers/oe3gh03.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 3</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 3</b><br>
 <i>Bee Gees, Boyzone, Cher, Elton John, Hanson, ...</i><br>
 Amadeo 555134-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050NTP"><img src="covers/oe3gh04.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 4</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 4</b><br>
 <i>Natalie Imbruglia, Mr. President, Bryan Adams, Bon Jovi, Falco, ...</i><br>
 WEA 9548-36357-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050P33"><img src="covers/oe3gh05.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 5</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 5</b><br>
 <i>Nek, Lutricia McNeal, Lighthouse Family, All Saints, Simply Red, ...</i><br>
 EMI Austria 7243 4 95625 2 3</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050UZG"><img src="covers/oe3gh06.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 6</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 6</b><br>
 <i>Elton John, Brandy &amp; Monica, Eagle-Eye Cherry, Donna Lewis, Ace Of Base, ...</i><br>
 Amadeo 565 576-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050VNT"><img src="covers/oe3gh07.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 7</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 7</b><br>
 <i>Roxette, Cher, Spice Girls, Sasha, R.E.M., Take That, ...</i><br>
 EMI Austria 7243 4 99604 2 8</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050WFU"><img src="covers/oe3gh08.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 8</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 8</b><br>
 <i>Bryan Adams, Mr. President, Cher, U2, Britney Spears, Geri Halliwell, ...</i><br>
 Amadeo 564 711-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050WXO"><img src="covers/oe3gh09.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 9</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 9</b><br>
 <i>Lou Bega, Shania Twain, Janet Jackson, Sasha, Backstreet Boys, Shola Ama, ...</i><br>
 WEA 9548-37972-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050KIE"><img src="covers/oe3gh10.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 10</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 10</b><br>
 <i>A*Teens, Him, Tom Jones feat. Mousse T., All Saints, Ricky Martin, The Corrs, ...</i><br>
 Amadeo 541 502-2</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050JLJ"><img src="covers/oe3gh11.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 11 + Greatest Summer Hits</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 11 + Greatest Summer Hits</b><br>
 <i>Santana feat. Rob Thomas, Melanie C, Sasha, a-ha, Texas, Gabrielle, Nek, Enrique Iglesias, Tina Turner, U2, ...</i><br>
 Doppel-CD<br>
 WEA 9548-38765-2
@@ -1517,7 +1517,7 @@ WEA 9548-38765-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B000050IVW"><img src="covers/oe3gh12.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 12</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 12</b><br>
 <i>ATC, Robbie Williams, The Corrs, Gabrielle, Marque, Melanie C, Ronan Keating, Morcheeba, Kylie Minogue, Anastacia, ...</i><br>
 EMI Austria 7243 5 29686 2 6
 <script language="JavaScript">CheckNew(2001,6,16);</script></td>
@@ -1525,14 +1525,14 @@ EMI Austria 7243 5 29686 2 6
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00005A7WA"><img src="covers/oe3gh13.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 13</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 13</b><br>
 <i>Sugababes, No Angels, Robbie Williams, Spooks, Debelah Morgan, Shaggy, Vanessa Amorosi, Kylie Minogue, ...</i><br>
 EMI Austria 7243 5 32125 2 0</td>
 </tr>
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00005M1BN"><img src="covers/oe3gh14.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 14 + Megahits der Ö3-Geschichte</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 14 + Megahits der &Ouml;3-Geschichte</b><br>
 <i>Depeche Mode, Wham!, Lionel Richie, Cher, R.E.M., Queen, The Beach Boys, Bryan Adams, Santana, Simon &amp; Garfunkel, ...</i><br>
 Doppel-CD<br>
 Amadeo 585 051-2
@@ -1541,7 +1541,7 @@ Amadeo 585 051-2
 
 <tr>
 <td valign="top"><a href="https://www.amazon.de/gp/product/B00005NY9H"><img src="covers/oe3gh15.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">Ö3</a> Greatest Hits Volume 15 + Greatest Lovesongs</b><br>
+<td valign="top"><b><a href="https://de.wikipedia.org/wiki/%C3%963">&Ouml;3</a> Greatest Hits Volume 15 + Greatest Lovesongs</b><br>
 <i>Uncle Kracker, Dante Thomas, Robbie Williams, Atomic Kitten, Titiyo, ABBA, Herbert Gr&ouml;nemeyer, Geri Halliwell, Dire Straits, ...</i><br>
 Doppel-CD<br>
 Warner Music Austria 0927-40734-2
