--- a/em.html
+++ b/em.html
@@ -41,7 +41,7 @@ function CheckNew(jahr, monat, tag)
 <table border="0" cellspacing="4" cellpadding="2">
 
 <tr>
-<td valign="top"><a href="https://www.discogs.com/release/1951049"><img src="covers/415517_mpm.jpg" width="130" height="130" border="0" alt="[cover]" title="discogs info"></a></td>
+<td valign="top"><a href="https://www.discogs.com/release/1951049"><img src="covers/415517.jpg" width="130" height="130" border="0" alt="[cover]" title="discogs info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Giovanni_Pierluigi_da_Palestrina">Giovanni Pierluigi da Palestrina</a> (ca. 1525&ndash;1594): Missa Papae Marcelli<br>
 <a href="https://de.wikipedia.org/wiki/Gregorio_Allegri">Gregorio Allegri</a> (1582&ndash;1652): Miserere<br>
 u.a.</b><br>
