--- a/ipop.html
+++ b/ipop.html
@@ -49,7 +49,7 @@ Geffen 924 181-2</td>
 </tr>
 
 <tr id="a">
-<td valign="top"><a href="https://www.amazon.de/gp/product/B00008AJL7"><img src="covers/510764.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B00008AJL7"><img src="covers/acdc_hth.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/AC/DC">AC/DC</a>: Highway To Hell</b><br>
 Remastered 2003<br>
 Sony/Albert 510764 2
@@ -57,7 +57,7 @@ Sony/Albert 510764 2
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B001F4YH8G"><img src="covers/88697392232.jpg" width="130" height="118" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B001F4YH8G"><img src="covers/acdc_bi.jpg" width="130" height="118" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/AC/DC">AC/DC</a>: Black Ice</b><br>
 Limited Deluxe Edition<br>
 Sony-BMG/Columbia 88697392232
@@ -86,14 +86,14 @@ Earcandy ECRC0013
 </tr>
 
 <tr id="b">
-<td valign="top"><a href="https://www.amazon.de/gp/product/B001SPQ7OY"><img src="covers/rebekka_you.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B001SPQ7OY"><img src="covers/rb_ity.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Rebekka_Bakken">Rebekka Bakken</a>: Is That You?</b><br>
 <font color="grey">MP3-Dateien</font><!-- st -->
 <script language="JavaScript">CheckNew(2010,1,21);</script></td>
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B000GG4KEU"><img src="covers/rebekka_cool.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B000GG4KEU"><img src="covers/rb_ikmc.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Rebekka_Bakken">Rebekka Bakken</a>: I Keep My Cool</b><br>
 Universal 0602498592564
 <script language="JavaScript">CheckNew(2010,12,21);</script></td>
@@ -591,7 +591,7 @@ A&amp;M CDA65004</td>
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B00004TKYI"><img src="covers/hodgson_otd.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B00004TKYI"><img src="covers/rh_otd.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Roger_Hodgson">Roger Hodgson</a>: Open the Door</b><br>
 Sony/Epic 4977392</td>
 </tr>
@@ -1016,7 +1016,7 @@ Polygram/Mercury 832 820-2</td>
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B000JLQSW4"><img src="covers/82876815242.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B000JLQSW4"><img src="covers/app_ir.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/The_Alan_Parsons_Project">The Alan Parsons Project</a>: I Robot</b><br>
 Remastered 2007<br>
 Sony BMG 82876815242
